new script, move assignment repository out of test-repository